   and CMetaFileDC. The creation of the various different types of CDCs has
   been simplified, and the CDC functions now use CDC pointers instead of
   HDCs.

Changes in detail
-----------------
- Added CMenu
- Added CString
- Added CFile
- Added CClientDC
- Added CMemDC
- Added CPaintDC
- Added CWindowDC
- Added BSTR2A
- Added BSTR2T
- Added BSTR2W
- Added CDC::Destroy
- Added CDocker::GetActiveDocker
- Added CDocker::SetCaptionColors
- Added CFrame::IsMDIFrame
- Added CWinApp::GetAccelerators
- Added CWinApp::OnIdle
- Added CWinApp::PreTranslateMessage
- Added CWinException::GetError
- Added CWnd::ChildWindowFromPoint
- Added CWnd::WindowFromPoint
- Modified LoadString 					now returns CString
- Modified CDC::BitBlt					now takes a CDC pointer
- Modified CDC::CreateCompatibleDC		now takes a CDC pointer and attaches the DC
- Modified CDC::CreateDC				now attaches the DC							
- Modified CDC::CreateIC            	now attaches the DC
- Modified CDC::CreateCompatibleBitmap	now takes a CDC pointer
- Modified CDC::CreateDIBitmap			now takes a CDC pointer
- Modified CDC::CreateDIBSection		now takes a CDC pointer
- Modified CDC::StretchBlt				now takes a CDC pointer
- Modified CDocker::IsChildOfDocker 	now takes a CWnd pointer instead of HWND
- Modified CDocker::IsRelated 			now takes a CWnd pointer instead of HWND
- Modified CWnd::GetAncestor			now accepts a gaFlags parameter
- Modified CWnd::OnEraseBkgnd			now accepts a CDC pointer
- Modified CWnd::OnPaint				now accepts a CDC pointer
- Removed CLoadString
- Removed GetWindowType for all CWnd classes
- Renamed CDocker::GetDockTopLevel to CDocker::GetTopmostDocker


Incompatibilities with previous versions
----------------------------------------
* The Win32++ now uses Run Time Type Information (RTTI). Older Microsoft
  compilers (Visual Studio 2003 and earlier) may need to enable the option to
  support RTTI.
* LoadString now returns a CString.